[package]
name = "now-playing"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
human-repr = "1.0.1"

[dependencies.windows]
version = "0.43.0"
features = [
    "Media",
    "Media_Control",
    "Foundation",
]

[dependencies.tokio]
version = "1"
features = ["full"]
