[package]
name = "now-playing"
version = "1.1.0"
authors = ["Dukk <acedaksh07@gmail.com>", "es183923"]
edition = "2021"
description = "A cli to get information and control media on Windows."
repository = "https://github.com/DakshG07/now-playing"
license = "GPL-3.0-only"
keywords = ["windows", "media", "music"]
categories = ["command-line-utilities"]

[dependencies]
human-repr = "1.0.1"

[dependencies.clap]
version = "4.0.18"
features = ["derive", "cargo"]

[dependencies.windows]
version = "0.43.0"
features = [
    "Media",
    "Media_Control",
    "Foundation",
]

[dependencies.tokio]
version = "1"
features = ["full"]
